swap buttons for me

--- a/metrics.ini
+++ b/metrics.ini
@@ -1598,6 +1598,9 @@ CodeSortList2=PREFSMAN:GetPreference("OnlyDedicatedMenuButtons") and "MenuLeft-M
 CodeSortList3=not PREFSMAN:GetPreference("OnlyDedicatedMenuButtons") and "Left-Right" or ""
 CodeEscapeFromEventMode=PREFSMAN:GetPreference("EventMode") and "MenuLeft,MenuLeft,MenuRight,MenuRight,MenuLeft,MenuLeft,MenuRight,MenuRight" or ""
 
+PreviousSongButton="MenuUp"
+NextSongButton="MenuDown"
+
 # this allows us to override the normal sort select command
 ModeMenuAvailable=false
 SelectMenuAvailable=true
@@ -1660,6 +1663,8 @@ Codes="CourseCodeDetector"
 [CodeDetector]
 PrevSteps1=GetCodeForGame("PrevSteps1")
 NextSteps1=GetCodeForGame("NextSteps1")
+PrevSteps2="MenuLeft"
+NextSteps2="MenuRight"
 
 # Sorting should done via ScreenSelectMusic's SortMenu
 # which is accessed via codes defined under [ScreenSelectMusic]
@@ -1667,7 +1672,7 @@ NextSort1=""
 NextSort2=""
 NextSort3=""
 NextSort4=""
-CloseCurrentFolder="Up-Down"
+CloseCurrentFolder="MenuUp-MenuDown"
 
 # This code can be used to navigate the player to whatever PrevScreen evaluates to
 # for the current screen. It's a bit too broad to be useful.  Backing out of SelectMusic
