Step 1 of getting GS to work
- GS connects on the main menu
- some misc files and functions already added that will be needed in the future

--- a/metrics.ini
+++ b/metrics.ini
@@ -243,6 +243,11 @@ Fallback="ScreenWithMenuElements"
 NextScreen=SL.Global.ScreenAfter.PlayAgain
 TimerSeconds=15
 
+[ScreenViewDownloads]
+Fallback="ScreenWithMenuElements"
+NextScreen="ScreenSelectMusic"
+PrevScreen="ScreenSelectMusic"
+
 ###########################################################################
 ###		Screen Select Music (and company)
 ###########################################################################
@@ -565,15 +570,19 @@ Appearance,5="mod,randomvanish;name,R.Vanish"
 
 # add "Backwards" as a turn mod if the current game is pump
 # (the engine redirects "Backwards" to "Mirror" in games other than pump so the option is redundant)
-Turn=(function() return GAMESTATE:GetCurrentGame():GetName()=="pump" and "7;selectone" or "6;selectone" end)()
+Turn=(function() return GAMESTATE:GetCurrentGame():GetName()=="pump" and "10;selectone" or "9;selectone" end)()
 TurnDefault="mod,no turn"
 Turn,1="mod,no turn;name,None"
 Turn,2="mod,mirror;name,Mirror"
 Turn,3="mod,left;name,Left"
 Turn,4="mod,right;name,Right"
-Turn,5="mod,shuffle;name,Shuffle"
-Turn,6="mod,supershuffle;name,Blender"
-Turn,7="mod,backwards;name,Backwards"
+Turn,5="mod,lrmirror;name,LRMirror"
+Turn,6="mod,udmirror;name,UDMirror"
+Turn,7="mod,shuffle;name,Shuffle"
+Turn,8="mod,supershuffle;name,Blender"
+Turn,9="mod,hypershuffle;name,Random"
+Turn,10="mod,backwards;name,Backwards"
+
 
 
 Insert="7;selectmultiple"
@@ -937,7 +946,7 @@ NumRowsShown=10
 # remove CustomSongs if the corresponding preferences don't exist in Preferences.ini
 # CustomSongs wasn't added until 5.1 beta, but SL still supports 5.0.12 for now
 LineNames=(function() \
-   local lines = "System,KeyConfig,TestInput,Input,GraphicsSound,Visual,Arcade,MenuTimer,CustomSongs,Profiles,Theme,CustomProfile,Acknowledgments,ClearCredits,Reload" \
+   local lines = "System,KeyConfig,TestInput,Input,GraphicsSound,Visual,Arcade,MenuTimer,CustomSongs,Profiles,Theme,GrooveStatsOptions,CustomProfile,Acknowledgments,ClearCredits,Reload" \
    if GAMESTATE:GetCoinMode() ~= "CoinMode_Pay" then lines = lines:gsub("ClearCredits,", "") end \
    if not PREFSMAN:PreferenceExists("CustomSongsEnable") then lines = lines:gsub("CustomSongs,", "") end \
    return lines \
@@ -949,6 +958,7 @@ LineAppearance="gamecommand;screen,ScreenAppearanceOptions;name,Appearance Optio
 LineGraphicsSound="gamecommand;screen,ScreenOptionsGraphicsSound;name,Graphics/Sound Options"
 LineArcade="gamecommand;screen,ScreenOptionsArcade;name,Arcade Options"
 LineTheme="gamecommand;screen,ScreenThemeOptions;name,Theme Options"
+LineGrooveStatsOptions="gamecommand;screen,ScreenGrooveStatsOptions;name,GrooveStatsOptions"
 LineCustomProfile="gamecommand;screen,ScreenSelectProfileCustomize;name,Customize Profile"
 LineMenuTimer="gamecommand;screen,ScreenMenuTimerOptions;name,MenuTimer Options"
 LineCustomSongs="gamecommand;screen,ScreenUSBProfileOptions;name,USB Profile Options"
@@ -966,6 +976,7 @@ NextScreen="ScreenOptionsService"
 
 LineNames="Theme,Language,Defaultnoteskin,EditorNoteskin"
 LineGame="conf,Game"
+LineGrooveStatsOptions="gamecommand;screen,ScreenGrooveStatsOptions;name,GrooveStatsOptions"
 LineTheme="lua,OperatorMenuOptionRows.Theme()"
 LineLanguage="conf,Language"
 LineAnnouncer="conf,Announcer"
@@ -1283,6 +1294,13 @@ ShowUnderlines=false
 ItemOnCommand=zoom,0.75
 ItemsStartX=220
 
+[ScreenGrooveStatsOptions]
+Fallback="ScreenOptionsServiceChild"
+LineNames="EnableGrooveStats,AutoDownloadUnlocks,SeparateUnlocksByPlayer"
+
+LineEnableGrooveStats="lua,ThemePrefsRows.GetRow('EnableGrooveStats')"
+LineAutoDownloadUnlocks="lua,ThemePrefsRows.GetRow('AutoDownloadUnlocks')"
+LineSeparateUnlocksByPlayer="lua,ThemePrefsRows.GetRow('SeparateUnlocksByPlayer')"
 
 
 ###########################################################################
@@ -1660,8 +1678,11 @@ BackInEventMode=""
 Mirror=""
 Left=""
 Right=""
+LRMirror=""
+UDMirror=""
 Shuffle=""
 SuperShuffle=""
+HyperShuffle=""
 NextTransform=""
 NextScrollSpeed=""
 PreviousScrollSpeed=""
