add option to always show GS scores, even in WF

--- a/metrics.ini
+++ b/metrics.ini
@@ -1173,7 +1173,7 @@ LineRescoreEarlyHits="lua,ThemePrefsRows.GetRow('RescoreEarlyHits')"
 [ScreenCustomProfile]
 Fallback="ScreenOptionsServiceChild"
 
-LineNames="ProfileCardInfo,PreferredGraph,PreferredSecPane,PreferredSecGraph,PreferredGameEnv,PreferredFaultWindow,GSOverride"
+LineNames="ProfileCardInfo,PreferredGraph,PreferredSecPane,PreferredSecGraph,PreferredGameEnv,PreferredFaultWindow,GSOverride,AlwaysGS"
 LineProfileCardInfo="lua,CustomOptionRow('ProfileCardInfo')"
 LinePreferredGraph="lua,CustomOptionRow('PreferredGraph')"
 LinePreferredSecPane="lua,CustomOptionRow('PreferredSecondPane')"
@@ -1181,6 +1181,7 @@ LinePreferredSecGraph="lua,CustomOptionRow('PreferredSecondGraph')"
 LinePreferredGameEnv="lua,CustomOptionRow('PreferredGameEnv')"
 LinePreferredFaultWindow="lua,CustomOptionRow('PreferredFaultWindow')"
 LineGSOverride="lua,CustomOptionRow('GSOverride')"
+LineAlwaysGS="lua,CustomOptionRow('AlwaysGS')"
 
 PrevScreen="ScreenOptionsService"
 NextScreen="ScreenOptionsService"
