add RE:Flex support

--- a/metrics.ini
+++ b/metrics.ini
@@ -28,6 +28,15 @@ HeaderOnCommand=visible,false
 TimerSeconds=14
 ShowCreditDisplay=true
 
+[ScreenTestReflex]
+Fallback="ScreenWithMenuElementsBlank"
+[ScreenTestReflex2]
+Fallback="ScreenWithMenuElementsBlank"
+[ScreenTestReflex3]
+Fallback="ScreenWithMenuElementsBlank"
+[ScreenTestReflex4]
+Fallback="ScreenWithMenuElementsBlank"
+
 [ScreenRankingSingle]
 Class="ScreenHighScores"
 Fallback="ScreenAttract"
