add portal entry (shuffles entire songlist rn)

--- a/metrics.ini
+++ b/metrics.ini
@@ -1536,7 +1536,7 @@ SkipY=_screen.h - 85
 
 [MusicWheel]
 ShowRoulette=false
-ShowPortal=false
+ShowPortal=true
 ShowRandom=false
 RandomPicksLockedSongs=false
 
@@ -1584,6 +1584,7 @@ PortalX=WideScale(150, 204)
 SectionCountX=_screen.w/2 - WideScale(9, 10)
 SectionCountOnCommand=horizalign,right;zoom,0.75
 RandomOnCommand=diffuseshift;effectcolor1,color("1,1,1,1");effectcolor2,color("#88EEFF");effectperiod,10;shadowlength,2
+PortalOnCommand=diffuseshift;effectcolor1,color("1,1,1,1");effectcolor2,color("#881fde");effectperiod,10;shadowlength,2
 
 WheelNotifyIconOnCommand=visible,false
 
