--- a/metrics.ini
+++ b/metrics.ini
@@ -1042,7 +1042,7 @@ Fallback="ScreenOptionsServiceChild"
 # functions aren't available; they were both added in 5.1 but SL also supports 5.0.12 for now
 # Remove DisplayMode from macOS for now; this is still broken in 5.1-beta and can cause players to get stuck.
 LineNames=(function() \
-   local lines = "VideoRenderer,DisplayMode,DisplayAspectRatio,DisplayResolution,RefreshRate,FullscreenType,DisplayColorDepth,HighResolutionTextures,MaxTextureResolution,TextureColorDepth,MovieColorDepth,SmoothLines,CelShadeModels,DelayedTextureDelete,Vsync,FastNoteRendering,ShowStats,AttractSoundFrequency,SoundVolume,EnableAttackSounds,EnableMineHitSound,GlobalOffsetSeconds,VisualDelaySeconds,RateModPreservesPitch" \
+   local lines = "VideoRenderer,DisplayMode,DisplayAspectRatio,DisplayResolution,RefreshRate,FullscreenType,DisplayColorDepth,HighResolutionTextures,MaxTextureResolution,TextureColorDepth,MovieColorDepth,SmoothLines,CelShadeModels,DelayedTextureDelete,Vsync,FastNoteRendering,ShowStats,AttractSoundFrequency,SoundVolume,EnableAttackSounds,EnableMineHitSound,GlobalOffsetSeconds,VisualDelaySeconds,MachineSyncBias,RateModPreservesPitch" \
 	if type(ConfAspectRatio) ~= "function" then lines = lines:gsub("DisplayAspectRatio","DisplayAspectRatioConf") end \
 	if type(ConfDisplayResolution) ~= "function" then lines = lines:gsub("DisplayResolution", "DisplayResolutionConf") end \
 	if type(ConfDisplayMode) ~= "function" then lines = lines:gsub("DisplayMode,", "") end \
@@ -1081,6 +1081,7 @@ LineSoundVolume="conf,SoundVolume"
 LineEnableAttackSounds="conf,EnableAttackSounds"
 LineEnableMineHitSound="conf,EnableMineHitSound"
 LineGlobalOffsetSeconds="lua,OperatorMenuOptionRows.GlobalOffsetSeconds()"
+LineMachineSyncBias="conf,MachineSyncBias"
 LineVisualDelaySeconds="lua,OperatorMenuOptionRows.VisualDelaySeconds()"
 LineRateModPreservesPitch="conf,RateModPreservesPitch"
 
@@ -1681,6 +1682,12 @@ MusicWheelSortMessageCommand=%function(self, params) \
 	self:ChangeSort('SortOrder_'..params.order) \
 end
 
+[ScreenPractice]
+Fallback="ScreenEdit"
+Class="ScreenEdit"
+NextScreen="ScreenSelectMusic"
+PrevScreen="ScreenOptionsEdit"
+EditMode="EditMode_Practice"
 
 [ScreenSelectCourse]
 Class="ScreenSelectMusic"
