change edit/practice beat bars through metrics.ini

--- a/metrics.ini
+++ b/metrics.ini
@@ -16,6 +16,13 @@ HeaderOnCommand=visible,false
 ###		ATTRACT LOOP SCREENS
 ###########################################################################
 
+[NoteField]
+ShowBeatBars=true
+BarMeasureAlpha=1
+Bar4thAlpha=0.7
+Bar8thAlpha=0
+Bar16thAlpha=0
+
 [ScreenAttract]
 ShowCreditDisplay=false
 FooterOnCommand=visible,false
