fuck i forgot this for the hash cache reload stuff

--- a/metrics.ini
+++ b/metrics.ini
@@ -1009,8 +1009,9 @@ ShowCreditDisplay=false
 
 [ScreenBuildHashCache]
 Fallback="ScreenWithMenuElements"
-PrevScreen="ScreenInit"
-NextScreen="ScreenInit"
+#PrevScreen="ScreenInit"
+#NextScreen="ScreenInit"
+NextScreen=WF.HashCacheNextScreen
 HeaderOnCommand=visible,false
 FooterOnCommand=visible,false
 ShowCreditDisplay=false
